--- a/UVSimGUI/MainPage.xaml
+++ b/UVSimGUI/MainPage.xaml
@@ -34,6 +34,8 @@
                                    BackgroundColor="{DynamicResource PrimaryColor}">
                 <Button x:Name="LoadButton" Text="Load" Clicked="OnLoadClicked" WidthRequest="80"
         BackgroundColor="{DynamicResource OffColor}" TextColor="{DynamicResource PrimaryColor}" />
+                <Button x:Name="LoadFolderButton" Text="Load Folder" Clicked="OnLoadFolderClicked" WidthRequest="80" 
+        BackgroundColor="{DynamicResource OffColor}" TextColor="{DynamicResource PrimaryColor}" />
 
                 <Button x:Name="WriteButton" Text="Write" Clicked="OnWriteClicked" WidthRequest="80"
         BackgroundColor="{DynamicResource OffColor}" TextColor="{DynamicResource PrimaryColor}" />
@@ -80,7 +82,8 @@
                     <Grid>
                         <CollectionView x:Name="FileExplorerView"
                                         ItemsSource="{Binding Files}"
-                                        SelectionMode="None"
+                                        SelectionMode="Single"
+                                        SelectionChanged="OnFileSelected"
                                         BackgroundColor="{DynamicResource OffColor}">
             
                             <!-- Header -->
@@ -97,9 +100,29 @@
                             <!-- Item Template -->
                             <CollectionView.ItemTemplate>
                                 <DataTemplate>
-                                    <StackLayout Padding="5">
-                                        <Label Text="{Binding FileName}" FontSize="14" TextColor="Black" />
-                                    </StackLayout>
+                                    <Grid Padding="5">
+                                        <Label x:Name="NameLabel"
+                                            Text="{Binding FileName}"
+                                            FontSize="14"
+                                            TextColor="Black" />
+
+                                        <!-- highlight when selected -->
+                                        <VisualStateManager.VisualStateGroups>
+                                            <VisualStateGroup Name="CommonStates">
+                                                <VisualState Name="Normal" />
+                                                <VisualState Name="Selected">
+                                                    <VisualState.Setters>
+                                                        <!-- background and foreground swap -->
+                                                        <Setter Property="BackgroundColor"
+                                                            Value="{DynamicResource PrimaryColor}" />
+                                                        <Setter TargetName="NameLabel"
+                                                            Property="Label.TextColor"
+                                                            Value="{DynamicResource OffColor}" />
+                                                    </VisualState.Setters>
+                                                </VisualState>
+                                            </VisualStateGroup>
+                                        </VisualStateManager.VisualStateGroups>
+                                    </Grid>
                                 </DataTemplate>
                             </CollectionView.ItemTemplate>
 
