File names get refreshed in the explorer

--- a/UVSimGUI/MainPage.xaml
+++ b/UVSimGUI/MainPage.xaml
@@ -32,11 +32,15 @@
                                    Spacing="20"
                                    Padding="10"
                                    BackgroundColor="{DynamicResource PrimaryColor}">
-                <Button x:Name="LoadButton" Text="Load" Clicked="OnLoadClicked" WidthRequest="80"
+                <Button x:Name="LoadButton" Text="File" Clicked="OnLoadClicked" WidthRequest="80"
         BackgroundColor="{DynamicResource OffColor}" TextColor="{DynamicResource PrimaryColor}" />
-                <Button x:Name="LoadFolderButton" Text="Load Folder" Clicked="OnLoadFolderClicked" WidthRequest="80" 
+                
+                <Button x:Name="LoadFolderButton" Text="Folder" Clicked="OnLoadFolderClicked" WidthRequest="80" 
         BackgroundColor="{DynamicResource OffColor}" TextColor="{DynamicResource PrimaryColor}" />
 
+                <Button x:Name="RenameButton" Text="Rename" Clicked="OnRenameClicked" WidthRequest="80"
+        BackgroundColor="{DynamicResource OffColor}" TextColor="{DynamicResource PrimaryColor}" />
+                
                 <Button x:Name="WriteButton" Text="Write" Clicked="OnWriteClicked" WidthRequest="80"
         BackgroundColor="{DynamicResource OffColor}" TextColor="{DynamicResource PrimaryColor}" />
 
@@ -45,7 +49,9 @@
 
                 <Button x:Name="RunButton" Text="Run" Clicked="OnRunClicked" WidthRequest="80"
         BackgroundColor="{DynamicResource OffColor}" TextColor="{DynamicResource PrimaryColor}" />
+
             </HorizontalStackLayout>
+        
 
             <!-- Main content area -->
             <Grid Grid.Row="2" Grid.Column="0" ColumnDefinitions="*, *" RowDefinitions="*">
